refactor: debug core apis.
